# ArticleRecommendationSystem

./: .gitignore  README.md  docker-compose.prod.yml  qwqw.ipynb
backend/: Dockerfile  main.ipynb  main.py  pyproject.toml  requirements.txt
backend/src/api/routes/: predict.py  router.py
backend/src/core/: definitions.py
backend/src/services/: model.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/views/: HomeView.vue  HomeView_.vue
