[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ivakhokhlov <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sentence-transformers = "^3.2.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
